--- a/app/src/main/res/layout/activity_fast_details.xml
+++ b/app/src/main/res/layout/activity_fast_details.xml
@@ -1,9 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+
+
     tools:context="com.avaygo.myfastingtracker.activities.FastDetailsActivity"
     android:id="@+id/relative_layout">
 
@@ -14,33 +13,11 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Your note:"
-                android:id="@+id/textView12"
-                android:layout_below="@+id/relativeLayout3"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignRight="@+id/relativeLayout3"
-                android:layout_alignEnd="@+id/relativeLayout3"
-                android:textSize="20sp"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="4dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="I had to finish this fast early because Dave gave me some toast and I couldn&apos;t refuse it."
-                android:id="@+id/text_note"
-                android:layout_below="@+id/textView12"
-                android:layout_alignLeft="@+id/textView12"
-                android:layout_alignStart="@+id/textView12"
-                android:textSize="16sp" />
+            android:layout_height="match_parent"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -50,7 +27,10 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/relativeLayout3"
-                android:padding="8dp">
+                android:paddingLeft="4dp"
+                android:paddingTop="4dp"
+                android:paddingRight="4dp"
+                android:paddingBottom="8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -62,7 +42,7 @@
                     android:layout_alignParentStart="true"
                     android:textSize="24sp"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
@@ -79,7 +59,7 @@
                     android:layout_marginLeft="8dp"
                     android:textSize="16sp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginBottom="16dp" />
+                    android:layout_marginBottom="8dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,7 +71,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="8dp"
                     android:textSize="16sp" />
 
                 <TextView
@@ -102,12 +82,56 @@
                     android:layout_below="@+id/text_block_2"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginLeft="8dp"
                     android:textSize="16sp"
-                    android:layout_marginBottom="16dp" />
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp" />
 
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativeLayout3"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/card_background"
+                android:layout_marginTop="16dp"
+                android:paddingLeft="4dp"
+                android:paddingTop="4dp"
+                android:paddingRight="4dp"
+                android:paddingBottom="8dp">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Your note:"
+                    android:id="@+id/textView12"
+                    android:layout_below="@+id/relativeLayout3"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignRight="@+id/relativeLayout3"
+                    android:layout_alignEnd="@+id/relativeLayout3"
+                    android:textSize="20sp"
+                    android:layout_marginTop="8dp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp" />
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="I had to finish this fast early because Dave gave me some toast and I couldn&apos;t refuse it."
+                    android:id="@+id/text_note"
+                    android:layout_below="@+id/textView12"
+                    android:textSize="16sp"
+                    android:layout_marginRight="8dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginBottom="8dp" />
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
+
 </RelativeLayout>
