--- a/app/src/main/res/layout/dialog_fast_message.xml
+++ b/app/src/main/res/layout/dialog_fast_message.xml
@@ -7,15 +7,76 @@
     android:padding="10dp"
     android:gravity="center_vertical">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Time Completed"
+            android:id="@+id/textView10"
+            android:layout_weight=".5"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="12h 45m"
+            android:id="@+id/textView11"
+            android:layout_weight=".5"
+            android:gravity="right"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="4dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Percent Completed"
+            android:id="@+id/textView8"
+            android:layout_weight=".5"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="90%"
+            android:id="@+id/textView9"
+            android:layout_weight=".5"
+            android:gravity="right"
+            android:textSize="16sp" />
+    </LinearLayout>
+
     <EditText
         android:id="@+id/editTextDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
-        android:textColor="@color/caldroid_darker_gray"
-        android:layout_margin="4dp"
-        android:hint="Your note..."
-        android:maxLines="15">
+        android:layout_margin="8dp"
+        android:hint="Your note (optional)..."
+        android:maxLines="15"
+        android:linksClickable="false"
+        android:inputType="textMultiLine|textAutoCorrect"
+        android:textColorHint="@color/caldroid_darker_gray"
+        android:textColor="@color/Main_Text">
 
         <requestFocus />
 
