--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -3,7 +3,7 @@
     <color name="Clouds">#ecf0f1</color>
     <color name="Silver">#bdc3c7</color>
 
-    <color name="LigtSilver">#ffcdd3d7</color>
+    <color name="LightSilver">#ffcdd3d7</color>
 
     <color name="Alizarin">#e74c3c</color>
     <color name="Pomegranate">#c0392b</color>
