--- a/app/src/main/res/layout/listview_record_row.xml
+++ b/app/src/main/res/layout/listview_record_row.xml
@@ -13,16 +13,27 @@
         android:orientation="horizontal"
         android:background="@drawable/card_background"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginRight="8dp"
+        android:weightSum="4"
+        android:padding="4dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/commentImageView"
+            android:src="@drawable/ic_comment_gray_24dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:scaleType="center" />
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:padding="12dp"
-            android:layout_marginTop="2dp"
-            android:layout_weight=".4">
+            android:layout_weight="2"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:layout_marginRight="2dp">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -45,7 +56,7 @@
                     android:id="@+id/text_start_time"
                     android:textColor="@color/transparent_black"
                     android:textSize="16sp"
-                    android:text="20:00" />
+                    android:text="20:00, Thursday" />
             </LinearLayout>
 
             <LinearLayout
@@ -76,18 +87,20 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:padding="12dp"
-            android:layout_marginTop="2dp"
             android:id="@+id/linearLayout"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1">
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="2dp"
+            android:paddingTop="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:id="@+id/text_duration"
                 android:layout_width="fill_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/imageViewIcon"
 
@@ -100,7 +113,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:text="100%"
                 android:id="@+id/text_percentage"
                 android:gravity="right"
