First commit in a long time. For the next version:
Change the pickers. - Time pickers etc.
Enabled database backup.
Allow longer than 24 hour duration.

--- a/app/src/main/res/layout/actionbar_done_button.xml
+++ b/app/src/main/res/layout/actionbar_done_button.xml
@@ -17,4 +17,5 @@
         android:paddingRight="20dp"
         android:text="DONE" />
 
+    <!--android:drawableLeft="@drawable/ic_check_normal_dark"-->
 </FrameLayout>
