--- a/app/src/main/res/menu/fasting_tracker.xml
+++ b/app/src/main/res/menu/fasting_tracker.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
     tools:context="com.avaygo.myfastingtracker.activities.MainActivity" >
 
     <item android:id="@+id/action_settings"
@@ -10,7 +11,7 @@
     <item
         android:id="@+id/myswitch"
         android:title=""
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:actionLayout="@layout/actionbar_switch_layout"
         />
 
