--- a/app/src/main/res/menu/menu_fast_details.xml
+++ b/app/src/main/res/menu/menu_fast_details.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.avaygo.myfastingtracker.activities.FastDetailsActivity">
 
     <item android:id="@+id/action_delete" android:title="@string/action_delete"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" android:showAsAction="never" />
 
     <item android:id="@+id/action_edit" android:title="@string/action_edit"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" android:showAsAction="never" />
 
 </menu>
