Added crude ability to back up the log database in the app and share it with dropbox, google drive etc.
First commit in a long time. For the next version:

Change the pickers. - Time pickers etc.
Enabled database backup.
Allow longer than 24 hour duration.

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -66,6 +66,8 @@
         <item name="pointer_alpha_ontouch">255</item>
     </style>
 
+
+
     <!--==============================================================================
       Light Application Style
    ===============================================================================-->
@@ -135,6 +137,10 @@
 
         <item name="pointer_halo_color_ontouch">#b334495e</item>
         <item name="pointer_alpha_ontouch">255</item>
+    </style>
+
+    <style name="SomeButtonStyle" parent="@android:style/Widget.Button">
+        <item name="colorButtonNormal">@color/Alizarin</item>
     </style>
 
 
