--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,28 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.home_fragment">
+    tools:context=".Fragments.home_fragment"
+    android:backgroundTintMode="screen"
+    android:backgroundTint="#52b4ed">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
+    TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Bumder"
         android:id="@+id/textView"
         android:layout_gravity="center" />
-</FrameLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:text="Backup Data"
+        android:id="@+id/export_button"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="#429ecc" />
+</RelativeLayout>
