--- a/app/src/main/res/layout/activity_fasting_tracker.xml
+++ b/app/src/main/res/layout/activity_fasting_tracker.xml
@@ -1,35 +1,47 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    android:id = "@+id/container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.avaygo.myfastingtracker.activities.MainActivity"
-    android:clickable="false"
-    style="?pageBackground">
+    android:fitsSystemWindows="true">
 
-    <!-- As the main content view, the view below consumes the entire
-       space available using match_parent in both dimensions. -->
-    <FrameLayout
-        android:id="@+id/mainContent"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </FrameLayout>
 
-    <!-- android:layout_gravity="start" tells DrawerLayout to treat
-       this as a sliding drawer on the left side for left-to-right
-       languages and on the right side for right-to-left languages.
-       If you're not building against API 17 or higher, use
-       android:layout_gravity="left" instead. -->
-    <!-- The drawer is given a fixed width in dp and extends the full height of
-         the container. -->
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-    <ListView
-        android:background="@color/Clouds"
-        android:divider="@null"
-        android:id="@+id/drawerList"
-        android:layout_width="240dp"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <!-- As the main content view, the view below consumes the entire
+        space available using match_parent in both dimensions. -->
+        <FrameLayout
+            android:id="@+id/mainContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"></ListView>
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+
+        app:itemTextColor="@color/Main_Text"
+        app:headerLayout="@layout/navheader"
+        app:menu="@menu/menu_navigation" />
 
 </android.support.v4.widget.DrawerLayout>
