--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -8,9 +8,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_marginTop="@dimen/top_margin"
     tools:context=".main"
     android:id="@+id/main"
-    style="?pageBackground">
+    android:background="#ffffff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -31,7 +32,9 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="@dimen/activity_horizontal_margin"
 
-            android:id="@+id/relative">
+            android:id="@+id/relative"
+
+            android:focusable="true">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -193,21 +196,14 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="85sp"
-        android:layout_height="48dp"
+        android:layout_width="112dp"
+        android:layout_height="wrap_content"
         android:text="@string/start_toggle"
         android:id="@+id/start_toggle"
+
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/start_fast_button"
-        style="?textButton"
-        android:textColor="@color/Clouds"
-        android:textSize="18dp"
         android:layout_alignRight="@+id/mainLinear"
-        android:layout_alignEnd="@+id/mainLinear"
-        android:layout_alignLeft="@+id/mainLinear"
-        android:layout_alignStart="@+id/mainLinear"
-        android:textStyle="bold" />
+        android:layout_alignEnd="@+id/mainLinear" />
 
 
 </RelativeLayout>
