--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,21 +4,14 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.home_fragment"
     android:backgroundTintMode="screen"
+    android:layout_marginTop="@dimen/top_margin"
     android:backgroundTint="#52b4ed">
 
     <!-- TODO: Update blank fragment layout -->
 
-    TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Bumder"
-        android:id="@+id/textView"
-        android:layout_gravity="center" />
 
     <Button
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
         android:text="Backup Data"
         android:id="@+id/export_button"
