--- a/app/src/main/res/layout/fragment_reminder_settings.xml
+++ b/app/src/main/res/layout/fragment_reminder_settings.xml
@@ -1,6 +1,7 @@
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
+    android:layout_marginTop="?attr/actionBarSize"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_relative"
     >
