--- a/app/src/main/res/layout/fragment_stats_screen.xml
+++ b/app/src/main/res/layout/fragment_stats_screen.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/top_margin"
         android:id="@+id/relative_layout"
         android:padding="16dp">
 
