--- a/app/src/main/res/menu/fasting_tracker.xml
+++ b/app/src/main/res/menu/fasting_tracker.xml
@@ -1,18 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
-    tools:context="com.avaygo.myfastingtracker.activities.MainActivity" >
+    tools:context="com.avaygo.myfastingtracker.activities.MainActivity">
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/myswitch"
-        android:title=""
-        android:showAsAction="ifRoom"
-        android:actionLayout="@layout/actionbar_switch_layout"
+        app:actionLayout="@layout/actionbar_switch_layout"
+        android:title="Reminders"
+        app:showAsAction="ifRoom"
         />
 
 </menu>
