--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme" parent="android:Theme.DeviceDefault.Light.DarkActionBar">
-        <item name="android:windowContentOverlay">@drawable/ab_transparent_example</item>
-        </style>
-
-    <style name="Theme.default">
-        <item name="textTitle">@style/title_font_default</item>
-        <item name="textTimer">@style/timer_font_default</item>
-        <item name="textRegular">@style/font_default</item>
-        <item name="textButton">@style/button_font_default</item>
-        <item name="pageBackground">@style/background_default</item>
-       <item name="circleProgress">@style/CircularProgressBar_default</item>
-        <item name="circleSeek">@style/CircularSeekBar_default</item>
+    <style name="Theme" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:windowContentOverlay">@drawable/ab_transparent_example</item>
     </style>
+
     <style name="Theme.light">
+
+        <item name="colorPrimary">#3F51B5</item><!-- Light Indigo -->
+        <item name="colorPrimaryDark">#3949AB</item><!-- Dark Indigo -->
+        <item name="colorAccent">#00B0FF</item> <!-- Blue -->
+
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="textTitle">@style/title_font_light</item>
         <item name="textTimer">@style/timer_font_light</item>
         <item name="textRegular">@style/font_light</item>
+
         <item name="textColoured">@style/font_light_coloured</item>
         <item name="dividerStyle">@style/divider_style</item>
+
         <item name="textButton">@style/button_font_light</item>
         <item name="pageBackground">@style/background_light</item>
         <item name="circleProgress">@style/CircularProgressBar_light</item>
         <item name="circleSeek">@style/CircularSeekBar_light</item>
+
+
     </style>
 
 </resources>
