--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -196,14 +196,15 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="112dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="@string/start_toggle"
         android:id="@+id/start_toggle"
 
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/mainLinear"
-        android:layout_alignEnd="@+id/mainLinear" />
+        android:layout_alignEnd="@+id/mainLinear"
+        android:theme="@style/StartButton" />
 
 
 </RelativeLayout>
