--- a/app/src/main/res/layout/fragment_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_fasting_started.xml
@@ -250,7 +250,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        style="@style/RedButton" />
+        style="@style/RedButton"
+        android:theme="@style/StopButton" />
 
     <Button style="?android:borderlessButtonStyle"
         android:layout_width="wrap_content"
