--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
+    style="?pageBackground"
     android:fillViewport="true"
     android:layout_width="match_parent"
-    android:background="#ffe0e0e0"
     android:id="@+id/ScrollView">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
